CSS_FILES=\
	mainView.css \
	jquery.mobile-1.1.0.min.css

cssdir = $(datadir)/iwkmail/css
css_DATA= $(CSS_FILES)

CSS_IMAGE_FILES=\
	images/ajax-loader.gif \
	images/ajax-loader.png \
	images/icons-18-black.png \
	images/icons-18-white.png \
	images/icons-36-black.png \
	images/icons-36-white.png

cssimagesdir = $(datadir)/iwkmail/css/images
cssimages_DATA= $(CSS_IMAGE_FILES)

